--- a/app/views/confessions/show.html.haml
+++ b/app/views/confessions/show.html.haml
@@ -2,7 +2,43 @@
 	%b Id:
 	= @confession.id
 
-%iframe.video{:width=>"560", :height=>"349", :src=>@confession.url, :frameborder=>"0", :allowfullscreen=>true}
+-#%iframe.embed{:width=>"560", :height=>"349", :src=>@confession.url, :frameborder=>"0", :allowfullscreen=>true}
+
+%object.embed{:height=>"81", :width=>"100%"}
+	%param{:name=>"movie", :value=>"http://player.soundcloud.com/player.swf?url=" + @confession.url}
+	%param{:name=>"allowscriptaccess", :value=>"always"}
+	%embed{:allowscriptaccess=>"always", :height=>"81", :src=>"http://player.soundcloud.com/player.swf?url=" + @confession.url, :type=>"application/x-shockwave-flash", :width=>"100%"} 
+	%span
+		= link_to @confession.url
+
+%p#views
+
+	%b Views:
+	= @confession.views	
+	\-
+	
+= form_for @confession do |f|
+	= f.label 'Vote up'
+	\:
+	= @confession.up
+	= f.hidden_field :up, :value => @confession.up + 1
+	= f.submit 'up'
+\-		
+= form_for @confession do |f|
+	= f.label :down
+	\:
+	= @confession.down
+	= f.hidden_field :down, :value => @confession.down + 1
+	= f.submit 'down'
+
+#share
+	:plain
+		<iframe id="twitter" allowtransparency="true" frameborder="0" scrolling="no" src="http://platform.twitter.com/widgets/tweet_button.html" style="width:130px; height:50px;"></iframe>
+		
+	:plain
+		<div id="fb-root"></div><script src="http://connect.facebook.net/en_US/all.js#appId=145493538795835&amp;xfbml=1"></script><fb:like href="" send="true" layout="button_count" width="450" show_faces="true" font=""></fb:like>
+
+%hr
 
 %p
 	%b Transcript:
@@ -13,39 +49,20 @@
 	= @confession.feelings
 
 %p
-	%b Views:
-	= @confession.views
-	
-%p	
-	= form_for @confession do |f|
-		= f.label :up
-		\:
-		= @confession.up
-		= f.hidden_field :up, :value => @confession.up + 1
-		= f.submit 'up'
-			
-	= form_for @confession do |f|
-		= f.label :down
-		\:
-		= @confession.down
-		= f.hidden_field :down, :value => @confession.down + 1
-		= f.submit 'down'
-
-%p
 	%b Tags:
 	- @confession.tags.each do |tag|
 		= tag.name
+		= '-' unless @confession.tags.last == tag
 
 %p
 	%b Comments:
-	%ul
+	%ul#comments
 		%li 
 			- if user_signed_in?	
 				= form_for(@comment) do |f|
 					.field
 						= f.text_field :comment
 						= hidden_field_tag "confession_id", @confession.id
-					.actions
 						= f.submit
 			- else
 				You need to 
@@ -55,10 +72,11 @@
 				before commenting	
 		- @confession.comments.each do |comment|
 			%li
-				= comment.comment
-				(
 				= time_ago_in_words(comment.created_at) 
-				ago
-				)
+				ago 
+				%b
+					= comment.user.nickname
+					said: 
+				= comment.comment
 	
 = link_to 'Back', confessions_path
