--- a/app/assets/stylesheets/screen.css.sass
+++ b/app/assets/stylesheets/screen.css.sass
@@ -13,7 +13,7 @@
 
 
 html
-	background: white image_url('background.jpg')
+	background: white image_path('background.jpg')
 
 body
 	+blueprint-typography
