--- a/app/assets/stylesheets/screen.css.sass
+++ b/app/assets/stylesheets/screen.css.sass
@@ -15,7 +15,7 @@
 html
 
 body
-	background: white image_url('background.jpg')
+	background: white url(image_path('background.jpg'))
 	+blueprint-typography
 	+container
 	background: transparent
