--- a/app/assets/stylesheets/screen.css.sass
+++ b/app/assets/stylesheets/screen.css.sass
@@ -13,9 +13,9 @@
 
 
 html
+	background: white url(image_path('background.jpg')) no-repeat
 
 body
-	background: white url(image_path('background.jpg'))
 	+blueprint-typography
 	+container
 	background: transparent
