--- a/app/assets/stylesheets/screen.css.sass
+++ b/app/assets/stylesheets/screen.css.sass
@@ -13,7 +13,7 @@
 
 
 html
-	background: white url(image_path('background.jpg')) no-repeat
+	background: white url(image_path('background.jpg'))
 
 body
 	+blueprint-typography
