--- a/app/views/site/index.html.haml
+++ b/app/views/site/index.html.haml
@@ -21,7 +21,7 @@
 			
 
 %section#page
-	%h1 The Online Confissionary
+	%h1 The Online Confessionary
 	- @latest.each do |confession|
 		%article
 			%p
