--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,6 +25,8 @@
 					]
 				- else
 					= link_to "Sign in", new_user_session_path
+					|
+					= link_to "Sign up", new_user_registration_path
 		
 			%h2 
 				%a{:href=>"/", :title=>"home"} Confess.ly
