--- a/app/assets/stylesheets/screen.css.sass
+++ b/app/assets/stylesheets/screen.css.sass
@@ -25,16 +25,17 @@ body
 		margin: 18px auto 0
 		
 		h2
+			float: left
 			+replace-text(image_path('logo.png'))
 			width: 303px
 			height: 72px
 			margin-right: 300px
-			display: inline-block
 			
 			a
 				display: block
 				width: 303px
-				height: 72px				
+				height: 72px
+			
 		
 		p#user
 			float: right
@@ -46,7 +47,7 @@ body
 
 		a#newconfession
 			display: inline-block
-			margin-top: 36px
+			margin-top: 18px
 			width: 159px
 			height: 38px
 			+replace-text(image_path('confess.png'))
