--- a/app/views/confessions/_form.html.haml
+++ b/app/views/confessions/_form.html.haml
@@ -17,7 +17,7 @@
 	.field
 		= f.label :transcript
 		%br/
-		= f.text_area :transcript
+		= f.text_field :transcript
 
 	.field
 		= f.label :feelings
