--- a/app/assets/stylesheets/screen.css.sass
+++ b/app/assets/stylesheets/screen.css.sass
@@ -90,6 +90,14 @@ body
 			h4
 				color: #6c96a6			
 				border-bottom: 1px solid #6c96a6
+
+			#contacts ul
+				list-style-type: none
+				padding-left: 0
+				
+				li
+					margin-bottom: 9px
+
 			
 		>section#rightbar
 			+last		
