--- a/app/assets/stylesheets/screen.css.sass
+++ b/app/assets/stylesheets/screen.css.sass
@@ -100,7 +100,11 @@ body
 
 			
 		>section#rightbar
-			+last		
+			+last	
+			
+			ol
+				li
+					margin-bottom: 9px	
 			
 			p
 				padding-bottom: 17px
