--- a/app/assets/stylesheets/screen.css.sass
+++ b/app/assets/stylesheets/screen.css.sass
@@ -136,6 +136,11 @@ body
 				padding-bottom: 8px
 				margin-bottom: 9px
 				border-bottom: 1px solid #6c96a6
+		
+		table
+			tr
+				border-top: 1px solid #eee
+				padding: 9px 0
 			
 	>footer 
 		+column(24)
