--- a/app/views/confessions/index.html.erb
+++ b/app/views/confessions/index.html.erb
@@ -1,27 +1,24 @@
 <h1>Listing confessions</h1>
 
 <table>
-  <tr>
-  	<th>Id</th>
-    <th>Transcript</th>
-    <th>Feelings</th>
-    <th>Views</th>
-    <th>Up</th>
-    <th>Down</th>
-    <th></th>
-  </tr>
-
-<% @confessions.each do |confession| %>
-  <tr>
-  	<td><%= confession.id %></td>
-    <td><%= confession.transcript %></td>
-    <td><%= confession.feelings %></td>
-    <td><%= confession.views %></td>
-    <td><%= confession.up %></td>
-    <td><%= confession.down %></td>
-    <td><%= link_to 'Show', confession %></td>
-  </tr>
-<% end %>
+  <thead>
+	  <tr>
+	    <th>Transcript</th>
+	    <th>Views</th>
+	    <th>Up</th>
+	    <th>Down</th>
+	  </tr>
+	</thead>
+  <tbody>
+	<% @confessions.each do |confession| %>
+	  <tr>
+	    <td><%= link_to confession.transcript[0..50], confession %></td>
+	    <td><%= confession.views %></td>
+	    <td><%= confession.up %></td>
+	    <td><%= confession.down %></td>
+	  </tr>
+	<% end %>
+	</tbody>
 </table>
 
 <br />
