--- a/app/views/confessions/show.html.haml
+++ b/app/views/confessions/show.html.haml
@@ -33,7 +33,7 @@
 
 #share
 	:plain
-		<iframe id="twitter" allowtransparency="true" frameborder="0" scrolling="no" src="http://platform.twitter.com/widgets/tweet_button.html?via=confessly&text=listen to this confession!" style="width:130px; height:50px;"></iframe>
+		<iframe id="twitter" allowtransparency="true" frameborder="0" scrolling="no" src="http://platform.twitter.com/widgets/tweet_button.html?via=confessly&text=listen to this confession! #swbay" style="width:130px; height:50px;"></iframe>
 		
 	:plain
 		<div id="fb-root"></div><script src="http://connect.facebook.net/en_US/all.js#appId=145493538795835&amp;xfbml=1"></script><fb:like href="" send="true" layout="button_count" width="450" show_faces="true" font=""></fb:like>
