--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,19 @@
 			<meta property="og:image" content="https://fbcdn-sphotos-a.akamaihd.net/hphotos-ak-snc6/205971_215627161823325_215290978523610_664890_310940_n.jpg" />
 			<meta property="og:site_name" content="confess.ly" />
 			<meta property="fb:admins" content="100000163155754" />
-		
+			<script type="text/javascript">
+
+			  var _gaq = _gaq || [];
+			  _gaq.push(['_setAccount', 'UA-24431036-1']);
+			  _gaq.push(['_trackPageview']);
+			
+			  (function() {
+			    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+			    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+			    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+			  })();
+			
+			</script>
 	%body
 		%header
 
